# Jobs_Endpoint

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jobssh.pem  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/controllers/: __init__.py  base.py  health_controller.py  job_alert_controller.py  job_controller.py  search_run_controller.py  source_controller.py
app/core/: __init__.py  config.py  container.py  database.py  errors.py  exceptions.py  pagination.py  rate_limit.py  security.py
app/discord/: __init__.py  bot.py  commands.py  interactions.py
app/models/: __init__.py  job.py  job_alert.py  registry.py  search_run.py  source_status.py  webhook.py
app/repositories/: __init__.py  job_alert_repository.py  job_repository.py  search_run_repository.py  source_status_repository.py
app/schemas/: __init__.py  dto.py
app/services/: __init__.py  alert_scheduler.py  clock.py  job_alert_service.py  job_service.py  notification_service.py  search_executor.py  search_run_service.py  source_service.py
app/sources/: __init__.py  base.py  disabled.py  mock.py  registry.py  wellfound.py
app/views/: __init__.py  health_view.py  job_alert_view.py  job_view.py  search_run_view.py  source_view.py
jobs_endpoint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install-hooks.sh  register_discord_commands.py
scripts/hooks/: post-commit  post-merge
tests/: conftest.py  helpers.py  test_alerts_api.py  test_api.py
tests/unit/: conftest.py  test_discord_commands.py  (+6 more)
(+1 files in other folders)
