[project]
name = "jobs-endpoint"
version = "0.1.0"
description = "Compliance-first FastAPI job search cache for permissioned job sources."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.32.0",
    "curl_cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

